// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`submitorder failed when user is blocked by pickupBranch (Agency) 1`] = `
{
  "data": {
    "submitOrder": {
      "orderId": null,
      "status": "BORCHK_USER_BLOCKED_BY_AGENCY",
    },
  },
}
`;

exports[`submitorder failed when user is not found on pickupbranch (borchk) 1`] = `
{
  "data": {
    "submitOrder": {
      "orderId": null,
      "status": "UNKNOWN_USER",
    },
  },
}
`;

exports[`submitorder fails if a user is not authenticated, and a incorrect/wrong userId is provided 1`] = `
{
  "data": {
    "submitOrder": null,
  },
}
`;

exports[`submitorder fails when user is not authenticated, and no userId provided 1`] = `
{
  "data": {
    "submitOrder": {
      "orsId": null,
      "status": "UNKNOWN_USER",
    },
  },
}
`;

exports[`submitorder succedes when user is authenticated, and no userId provided 1`] = `
{
  "data": {
    "submitOrder": {
      "orderId": "1046910462",
      "status": "NOT_OWNED_ILL_LOC",
    },
  },
}
`;

exports[`submitorder succedes when user is not authenticated, but userId provided 1`] = `
{
  "data": {
    "submitOrder": {
      "orderId": "1046910462",
      "status": "NOT_OWNED_ILL_LOC",
    },
  },
}
`;
